few changes relative to client side development.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "target": "ES2015",
     "outDir": "build",
     "strict": true,
-    "module": "ES2015",
+    "module": "CommonJS",
     "rootDir": "src",
     "paths": {
       "@/*": ["./*"]
