--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "main": "src/app.ts",
+  "main": "src/index.ts",
   "author": "M. Feroz Mirza",
   "license": "Apache-2.0",
   "private": true,
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/mysql": "^2.15.25",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.3"
   },
   "scripts": {
-    "dev": "nodemon src/app.ts",
-    "start": "nodemon build/app.js",
+    "dev": "nodemon src/index.ts",
+    "start": "nodemon build/index.js",
     "build": "tsc"
   },
   "dependencies": {
